fix: pause button text alignment

--- a/gem-puzzle/style.scss
+++ b/gem-puzzle/style.scss
@@ -22,10 +22,20 @@ body {
   margin-bottom: 1rem;
   font-size: 2rem;
   padding: .5rem 0;
+
+  position: relative;
+
+  &__container {
+    position: relative;
+    flex-basis: 20%;
+  }
   
   &__button {
     cursor: pointer;
     border-bottom: 2px solid transparent;
+    position: absolute;
+    right: 0;
+    white-space: nowrap;
     
     &:hover {
       color: salmon;
@@ -95,6 +105,7 @@ body {
 
   background-color: #fff7;
   backdrop-filter: blur(1.5px);
+  opacity: 1;
 
   transition: background-color .5s cubic-bezier(1,.03,.83,.67), opacity .3s;
 
